--- a/note_taking_frontend/src/index.html
+++ b/note_taking_frontend/src/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular</title>
+  <title>Secure Notes Organizer</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Runtime-configurable API base URL -->
+  <meta name="NG_APP_API_BASE_URL" content="/api">
+  <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
 </head>
 <body>
   <app-root></app-root>
